--- a/style.css
+++ b/style.css
@@ -62,14 +62,42 @@ a:hover {
 }
 
 footer {
-	margin: 50px 0 50px;
+	margin: 35px 0;
 	text-align: center;
 	font-size: 0.8em;
 }
 
 .footer-container {
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	width: 800px;
 	margin: 0 auto;
+}
+
+.footer-container .github {
+	display: flex;
+	gap: 5px;
+	align-items: center;
+}
+
+.footer-container .github:before {
+	content: '';
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	background: url("assets/github.svg");
+}
+
+.footer-container .rs-school {
+	display: inline-block;
+	width: 117px;
+	height: 49px;
+	background: url("assets/rsschool-js-logo.svg");
+}
+
+.footer-container .rs-school a {
+	display: block;
+	width: 100%;
+	height: 100%;
 }
