--- a/style.css
+++ b/style.css
@@ -48,6 +48,17 @@ header {
 	padding-bottom: 20px;
 }
 
+header .base-info {
+	display: flex;
+	justify-content: center;
+	gap: 3em;
+}
+
+header .base-info .photo img {
+	border-radius: 50%;
+	border: 1px solid #c5c5c5;
+}
+
 h1 {
 	color: #333;
 }
